--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   "scripts": {
     "start": "node server",
     "client": "yarn --cwd client start",
+    "client-install": "yarn --cwd client install",
     "server": "nodemon server",
     "build": "yarn --cwd client install && yarn --cwd client build",
-    "dev": "concurrently --names 'SERVER,CLIENT' -c 'bgBlue.bold,bgMagenta.bold' 'yarn run server' 'yarn run client'"
+    "dev": "concurrently --names 'SERVER,CLIENT' -c 'bgBlue.bold,bgMagenta.bold' 'yarn server' 'yarn client'"
   },
   "devDependencies": {
     "concurrently": "^5.2.0",
@@ -24,6 +25,6 @@
     "pg-promise": "^10.5.6"
   },
   "engines": {
-    "node": "14.x"
+    "node": "15.x"
   }
 }
