--- a/package.json
+++ b/package.json
@@ -16,15 +16,18 @@
     "dev": "concurrently --names 'SERVER,CLIENT' -c 'bgBlue.bold,bgMagenta.bold' 'yarn server' 'yarn client'"
   },
   "devDependencies": {
-    "concurrently": "^5.2.0",
-    "nodemon": "^2.0.4"
+    "concurrently": "^5.3.0",
+    "nodemon": "^2.0.7"
   },
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "pg-promise": "^10.5.6"
+    "pg-promise": "^10.9.1"
   },
   "engines": {
     "node": "15.x"
+  },
+  "resolutions": {
+    "immer": "^8.0.1"
   }
 }
